--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <h1><img src="https://git.swee.codes/swee/IRCat/raw/branch/main/ircat-invert.svg" height="50%"></h1>
 <p>A lightweight IRCd written in Python</p>
 <hr>
-<a href="/try.html">Try now!</a>
+<a href="/try.html" class=download>Try now!</a>
 <br>
-<a href="https://git.swee.codes/swee/IRCat">Source code</a>
+<br>
+<a href="https://git.swee.codes/swee/IRCat" class=link>Source code</a>
