--- a/try.html
+++ b/try.html
@@ -8,4 +8,4 @@
 <p>Port: 6667</p>
 <p>SSL: OFF</p>
 <p>Channel: #swee</p>
-<p><a href="irc://swee.codes/#swee"></a></p>
+<p><a href="irc://swee.codes/#swee">IRC:// link</a></p>
