--- a/try.html
+++ b/try.html
@@ -8,4 +8,4 @@
 <p>Port: 6667</p>
 <p>SSL: OFF</p>
 <p>Channel: #swee</p>
-<p><a href="irc://swee.codes:6667/#swee" class=link>IRC:// link</a></p>
+<p><a href="irc+unsecure://swee.codes:6667/#swee" class=link>IRC:// link</a></p>
