--- a/index.html
+++ b/index.html
@@ -8,3 +8,8 @@
 <br>
 <br>
 <a href="https://git.swee.codes/swee/IRCat" class=link>Source code</a>
+<hr>
+
+<a href="swee.codes"><img src="https://swee.codes/assets/sweelogo.png" width="20%"></a>
+<br>
+<p>A project made with &#128154; by Swee.</p>
