--- a/try.html
+++ b/try.html
@@ -9,3 +9,8 @@
 <p>SSL: OFF</p>
 <p>Channel: #swee</p>
 <p><a href="irc://swee.codes:6667/#swee" class=link>IRC:// link</a> (Broken because no SSL)</p>
+<hr>
+
+<a href="swee.codes"><img src="https://swee.codes/assets/sweelogo-invert.png" width="20%"></a>
+<br>
+<p>A project made with &#128154; by Swee.</p>
