--- a/try.html
+++ b/try.html
@@ -4,6 +4,7 @@
 <center>
 <h1>Try Now!</h1>
 <p>I haven't buyed a separate VPS for IRCat, so I'm currently testing on my main VPS.</p>
+<p>For bug reports, I recommend using the <a href="https://discuss.swee.codes/c/12" class=link>Issue tracker in Discourse</a>a</p>
 <p>Host: swee.codes</p>
 <p>Port: 6667</p>
 <p>SSL: OFF</p>
