--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <center>
 <h1><img src="https://git.swee.codes/swee/IRCat/raw/branch/main/ircat-invert.svg" height="50%"></h1>
 <p>A lightweight IRCd written in Python</p>
+<p>It is currently very experimental as most IRC functions are NOT implemented.</p>
 <hr>
 <a href="/try.html" class=download>Try now!</a>
 <br>
