--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <link href="https://swee.codes/style.css" rel="stylesheet" type="text/css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <title>Codename IRCat</title>
 <center>
 <h1><img src="https://git.swee.codes/swee/IRCat/raw/branch/main/ircat-invert.svg" height="50%"></h1>
