--- a/try.html
+++ b/try.html
@@ -1,4 +1,5 @@
 <link href="https://swee.codes/style.css" rel="stylesheet" type="text/css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <title>Try - Codename IRCat</title>
 <a class="nav" href="/"><img src="https://swee.codes/icons/back.svg"></a>
 <center>
