--- a/try.html
+++ b/try.html
@@ -13,6 +13,6 @@
 <p><a href="irc://swee.codes:6667/#swee" class=link>IRC:// link</a> (Broken because no SSL)</p>
 <hr>
 
-<a href="swee.codes"><img src="https://swee.codes/assets/sweelogo-invert.png" width="20%"></a>
+<a href="https://swee.codes"><img src="https://swee.codes/assets/sweelogo-invert.png" width="20%"></a>
 <br>
 <p>A project made with &#128154; by Swee.</p>
