--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <title>Codename IRCat</title>
 <center>
-<h1><img src="/logo.svg" height="50%"></h1>
+<h1><img src="/logo.svg" width="50%"></h1>
 <p>A lightweight IRCd written in Python</p>
 <p>It is currently very experimental as most IRC functions are NOT implemented.</p>
 <hr>
