--- a/try.html
+++ b/try.html
@@ -3,7 +3,7 @@
 <title>Try - Codename IRCat</title>
 <a class="nav" href="/"><img src="https://swee.codes/icons/back.svg"></a>
 <center>
-<h1>Try Now!</h1>
+<h1>Try <img src="/ircat-small.svg" width=24px></h1>
 <p>I haven't buyed a separate VPS for IRCat, so I'm currently testing on my main VPS.</p>
 <p>For bug reports, I recommend using the <a href="https://discuss.swee.codes/c/12" class=link>Issue tracker in Discourse.</a></p>
 <p>Host: swee.codes</p>
