--- a/try.html
+++ b/try.html
@@ -1,9 +1,9 @@
 <link href="https://swee.codes/style.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <title>Try - Codename IRCat</title>
-<a class="nav" href="/"><img src="https://swee.codes/icons/back.svg"></a>
+<img src="/ircat-small.svg" width=48px><a class="nav" href="/"><img src="https://swee.codes/icons/back.svg"></a>
 <center>
-<h1>Try <img src="/ircat-small.svg" width=48px></h1>
+<h1>Try now!</h1>
 <p>I haven't buyed a separate VPS for IRCat, so I'm currently testing on my main VPS.</p>
 <p>For bug reports, I recommend using the <a href="https://discuss.swee.codes/c/12" class=link>Issue tracker in Discourse.</a></p>
 <p>Host: swee.codes</p>
