--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <link href="https://swee.codes/style.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <title>Codename IRCat</title>
-<img src="/ircat-small.svg" width=48px> <a class="nav" href="/"><img src="https://swee.codes/icons/home-active.svg"></a> <a class="nav" href="/">Try</a>
+<img src="/ircat-small.svg" width=48px> <a class="nav" href="/" style="color:#2854C5;">Home</a> <a class="nav" href="/">Try</a>
 <center>
 <h1><img src="/logo.svg" width="50%"></h1>
 <p>A lightweight IRCd written in Python</p>
