--- a/try.html
+++ b/try.html
@@ -1,7 +1,7 @@
 <link href="https://swee.codes/style.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <title>Try - Codename IRCat</title>
-<img src="/ircat-small.svg" width=48px><a class="nav" href="/"><img src="https://swee.codes/icons/back.svg"></a>
+<img src="/ircat-small.svg" width=48px> <a class="nav" href="/">Home</a> <a class="nav" href="/" style="color:#2854C5;">Try</a>
 <center>
 <h1>Try now!</h1>
 <p>I haven't buyed a separate VPS for IRCat, so I'm currently testing on my main VPS.</p>
