--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <title>Codename IRCat</title>
 <img src="/ircat-small.svg" width=48px>
 <br>
-<a class="nav" href="/try.html" style="color:#2854C5;">Home</a> <a class="nav" href="/">Try</a>
+<a class="nav" href="/" style="color:#2854C5;">Home</a>
+<a class="nav" href="/try.html">Try</a>
 <center>
 <h1><img src="/logo.svg" width="50%"></h1>
 <p>A lightweight IRCd written in Python</p>
