--- a/try.html
+++ b/try.html
@@ -3,7 +3,8 @@
 <title>Try - Codename IRCat</title>
 <img src="/ircat-small.svg" width=48px>
 <br>
-<a class="nav" href="/">Home</a> <a class="nav" href="/try.html" style="color:#2854C5;">Try</a>
+<a class="nav" href="/">Home</a>
+<a class="nav" href="/try.html" style="color:#2854C5;">Try</a>
 <center>
 <h1>Try now!</h1>
 <p>I haven't buyed a separate VPS for IRCat, so I'm currently testing on my main VPS.</p>
