--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 <br>
 <a href="https://git.swee.codes/swee/IRCat" class=link>Source code</a>
 <hr>
-
+<noscript><a href="https://git.swee.codes/swee/IRCat/src/branch/main/todo.md">To-Do list</a></noscript>
+<md-block src="https://git.swee.codes/swee/IRCat/raw/branch/main/todo.md"></md-block>
+<script type="module" src="https://md-block.verou.me/md-block.js"></script>
+<hr>
 <a href="https://swee.codes"><img src="https://swee.codes/assets/sweelogo-invert.png" width="50%"></a>
 <br>
 <p>A project made with &#128154; by Swee.</p>
