--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <a href="https://git.swee.codes/swee/IRCat" class=link>Source code</a>
 <hr>
 <noscript><a href="https://git.swee.codes/swee/IRCat/src/branch/main/todo.md">To-Do list</a></noscript>
+</center>
 <md-block src="https://api.allorigins.win/raw?url=https://git.swee.codes/swee/IRCat/raw/branch/main/todo.md"></md-block>
+<center>
 <script type="module" src="https://md-block.verou.me/md-block.js"></script>
 <hr>
 <a href="https://swee.codes"><img src="https://swee.codes/assets/sweelogo-invert.png" width="50%"></a>
