--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <br>
 <a href="https://git.swee.codes/swee/IRCat" class=link>Source code</a>
 <hr>
-<noscript><a href="https://git.swee.codes/swee/IRCat/src/branch/main/todo.md">To-Do list</a></noscript>
+<a href="https://git.swee.codes/swee/IRCat/src/branch/main/todo.md">To-Do list</a>
 </center>
 <md-block src="https://api.allorigins.win/raw?url=https://git.swee.codes/swee/IRCat/raw/branch/main/todo.md"></md-block>
 <center>
