--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <br>
 <a class="nav" href="/" style="color:#2854C5;">Home</a>
 <a class="nav" href="/try.html">Try</a>
+<a class="nav" href="/support.html">Support</a>
 <center>
 <h1><img src="/logo.svg" width="50%"></h1>
 <p>A lightweight IRCd written in Python</p>
