--- a/support.html
+++ b/support.html
@@ -1,6 +1,6 @@
 <link href="https://swee.codes/style.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-<title>Try - Codename IRCat</title>
+<title>Support - Codename IRCat</title>
 <img src="/ircat-small.svg" width=48px>
 <br>
 <a class="nav" href="/">Home</a>
