--- a/support.html
+++ b/support.html
@@ -12,4 +12,4 @@
 <br>
 <p>IRCat is built & owned by <a href="https://swee.codes" class=link>SWEE.codes</a>. I don't get much money to operate all this and live life at the same time. you can support me on one of these platforms:</p>
 <br>
-<a href="https://patreon.com/sweeistaken"><img src="https://swee.codes/icons/patreon.svg" width=24px> Patreon</a>
+<a href="https://patreon.com/sweeistaken" class=link><img src="https://swee.codes/icons/patreon.svg" width=24px> Patreon</a>
