--- a/foo.html
+++ b/foo.html
@@ -4,7 +4,7 @@
 <img src="/ircat-small.svg" width=48px>
 <center>
 <h1>IRCv3 capability: ircat.xyz/foo</h1>
-<p>This is a test capability used by the IRCd, it does not require aknowledgement, and does not do anything.</p>
+<p>This is a test capability used by the IRCd. it does not require aknowledgement and does not do anything.</p>
 <br>
 <br>
 <a href="/" class=link>Home page</a>
