--- a/try.html
+++ b/try.html
@@ -1,13 +1,13 @@
 <link href="https://swee.codes/style.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-<title>Try - Codename IRCat</title>
+<title>Try (SweeNet) - Codename IRCat</title>
 <img src="/ircat-small.svg" width=48px>
 <br>
 <a class="nav" href="/">Home</a>
 <a class="nav" href="/try.html" style="color:#2854C5;">Try</a>
 <a class="nav" href="/support.html">Support</a>
 <center>
-<h1>Try now!</h1>
+<h1>Try now! (SweeNet)</h1>
 <p>I haven't buyed a separate VPS for IRCat, so I'm currently testing on my main VPS.</p>
 <p>For bug reports, I recommend using the <a href="https://discuss.swee.codes/c/12" class=link>Issue tracker in Discourse.</a></p>
 <p>Host: swee.codes</p>
