--- a/try.html
+++ b/try.html
@@ -8,9 +8,8 @@
 <a class="nav" href="/support.html">Support</a>
 <center>
 <h1>Try now! (SweeNet)</h1>
-<p>I haven't buyed a separate VPS for IRCat, so I'm currently testing on my main VPS.</p>
 <p>For bug reports, I recommend using the <a href="https://discuss.swee.codes/c/12" class=link>Issue tracker in Discourse.</a></p>
-<p>Host: swee.codes</p>
+<p>Host: irc.ircat.xyz</p>
 <p>Port: 6667</p>
 <p>SSL: OFF</p>
 <p>Channel: #swee</p>
