--- a/try.html
+++ b/try.html
@@ -13,6 +13,7 @@
 <p>Port: 6667</p>
 <p>SSL: OFF</p>
 <p>Channel: #swee</p>
+<p><a href="/servers.html">List of SweeNet servers</a></p>
 <p><a href="irc://swee.codes:6667/#swee" class=link>IRC:// link</a> (Broken because no SSL)</p>
 <hr>
 
