--- a/servers.html
+++ b/servers.html
@@ -17,7 +17,7 @@
   <tr>
     <td>Peppermint (peppermint.ircat.xyz)</td>
     <td>Seattle, Washington, United States of America.</td>
-    <td>An official SWEE.codes server, using an alternate IP for Codename IRCat.</td>
+    <td>An official <a href="https://swee.codes/services" class=link>SWEE.codes server, using an alternate IP (soon) for Codename IRCat.</td>
   </tr>
 </table>
 <hr>
