--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 <a href="https://git.swee.codes/swee/IRCat/src/branch/main/todo.md" class=link>To-Do list</a>
 <br>
 <br>
+<a href="https://mastodon.swee.codes/tags/CodenameIRCat">Mastodon tag</a>
+<br>
+<br>
 <a href="/support.html" class=link>Support the project</a>
 <hr>
 <a href="https://swee.codes"><img src="https://swee.codes/assets/sweelogo-invert.png" width="50%"></a>
