--- a/servers.html
+++ b/servers.html
@@ -12,12 +12,10 @@
   <tr>
     <th>Server</th>
     <th>Location</th>
-    <th>Comment</th>
   </tr>
   <tr>
-    <td>Peppermint (peppermint.ircat.xyz)</td>
-    <td>Seattle, Washington, United States of America.</td>
-    <td>An official <a href="https://swee.codes/services" class=link>SWEE.codes</a> server, using an alternate IP (soon) for Codename IRCat.</td>
+    <td>peppermint.ircat.xyz</td>
+    <td>Seattle, WA, US</td>
   </tr>
 </table>
 <hr>
