--- a/servers.html
+++ b/servers.html
@@ -8,7 +8,7 @@
 <a class="nav" href="/support.html">Support</a>
 <center>
 <h1>SweeNet servers</h1>
-<table width=75%>
+<table>
   <tr>
     <th>Server</th>
     <th>Location</th>
