--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <a href="https://git.swee.codes/swee/IRCat/src/branch/main/todo.md" class=link>To-Do list</a>
 <br>
 <br>
-<a href="https://mastodon.swee.codes/tags/CodenameIRCat">Mastodon tag</a>
+<a href="https://mastodon.swee.codes/tags/CodenameIRCat" class=link>Mastodon tag</a>
 <br>
 <br>
 <a href="/support.html" class=link>Support the project</a>
