--- a/servers.html
+++ b/servers.html
@@ -12,10 +12,14 @@
   <tr>
     <th>Server</th>
     <th>Location</th>
+    <th>Hosted by</th>
+    <th>Hosting provider</th>
   </tr>
   <tr>
     <td>peppermint.ircat.xyz</td>
     <td>Seattle, WA, US</td>
+    <td>Swee</td>
+    <td><a href="https://contabo.com/">Contabo</a></td>
   </tr>
 </table>
 <hr>
