--- a/servers.html
+++ b/servers.html
@@ -18,8 +18,8 @@
   <tr>
     <td>peppermint.ircat.xyz</td>
     <td>Seattle, WA, US</td>
-    <td>Swee</td>
-    <td><a href="https://contabo.com/">Contabo</a></td>
+    <td><a href="https://swee.codes" class=link>Swee</a></td>
+    <td><a href="https://contabo.com/" class=link>Contabo</a></td>
   </tr>
 </table>
 <hr>
