--- a/try.html
+++ b/try.html
@@ -14,7 +14,7 @@
 <p>SSL: OFF</p>
 <p>Channel: #swee</p>
 <p><a href="/servers.html" class=link>List of SweeNet servers</a></p>
-<p><a href="irc://swee.codes:6667/#swee" class=link>IRC:// link</a> (Broken because no SSL)</p>
+<p><a href="irc://irc.ircat.xyz/#swee" class=link>IRC:// link</a> (Broken because no SSL)</p>
 <hr>
 
 <a href="https://swee.codes"><img src="https://swee.codes/assets/sweelogo-invert.png" width="50%"></a>
