--- a/try.html
+++ b/try.html
@@ -10,11 +10,11 @@
 <h1>Try now! (SweeNet)</h1>
 <p>For bug reports, I recommend using the <a href="https://discuss.swee.codes/c/12" class=link>Issue tracker in Discourse.</a></p>
 <p>Host: irc.ircat.xyz</p>
-<p>Port: 6667</p>
-<p>SSL: OFF</p>
+<p>Port: 6697</p>
+<p>SSL: ON</p>
 <p>Channel: #swee</p>
 <p><a href="/servers.html" class=link>List of SweeNet servers</a></p>
-<p><a href="irc://irc.ircat.xyz/#swee" class=link>IRC:// link</a> (Broken because no SSL)</p>
+<p><a href="irc://irc.ircat.xyz/#swee" class=link>IRC:// link</a> (Now working!)</p>
 <hr>
 
 <a href="https://swee.codes"><img src="https://swee.codes/assets/sweelogo-invert.png" width="50%"></a>
