--- a/servers.html
+++ b/servers.html
@@ -22,6 +22,7 @@
     <td><a href="https://contabo.com/" class=link>Contabo</a></td>
   </tr>
 </table>
+<p>&#9888;&#65039; <strong>Warning: </strong> It is recommened to use irc.ircat.xyz because the individual servers don't have their own SSL certificate.</p>
 <p>&#9888;&#65039; <strong>Warning: </strong> Although I am eager for support with more servers, Codename IRCat does not support multiple servers yet, thank you.</p>
 <hr>
 
